# unofficial_tabdeal_api

./: .devskim.json  .flake8  .gitignore  .grype.yaml  .hound.yml  .ls-lint.yml  .lycheeignore  .markdown-link-check.json  .pre-commit-config.yaml  .proselintrc.json  .readthedocs.yml  .safety-policy.yml  .shellcheckrc  .trivyignore  .vale.ini  .valeignore  .yamllint.yml  CODE_OF_CONDUCT.md  CODE_OF_CONDUCT.rst  CONTRIBUTING.md  CONTRIBUTING.rst  README.fa.rst  README.md  README.rst  SECURITY.md  codecov.yml  kics.config  lychee.toml  noxfile.py  pyproject.toml  pyptoject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
.devcontainer/: Dockerfile  devcontainer.json  post-create.sh
.github/: CODEOWNERS  dependabot.yml  labels.yml  release-drafter.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  documentation.md  feature_request.md
.github/actions/setup-poetry-env/: action.yml
.github/workflows/: build-tests.yml  checkov.yml  codeql.yml  codspeed.yml  compatibility-coverage.yml  constraints.txt  dependency-review.yml  dev-release-test-package.yml  dusti-lock.yml  kics.yml  labeler.yml  links.yml  ls-lint.yml  main_tests.incomplete  main_tests.yml  mega-linter.yml  release-packge.yml  safety-cli.yml  scorecard.yml  test_python_package.yml  test_tests.yml  tests.incomplete  tests.yml
docs/: API.md  codeofconduct.rst  conf.py  contributing.md  contributing.rst  faq.rst  index.md  index.rst  license.rst  reference.md  reference.rst  reference.rst.bak  reference_copy.rst.bak  requirements.txt
src/unofficial_tabdeal_api/: __init__.py  authorization.py  base.py  constants.py  enums.py  exceptions.py  margin.py  models.py  order.py  tabdeal_client.py  utils.py  wallet.py
styles/: custom_spelling.yml
styles/config/ignore/: spell_ignore.txt
tests/: __init__.py  modified-objects.inv  objects.inv  test.py  test_authorization.py  test_base.py  test_constants.py  test_enums.py  test_helper_functions.py  test_margin.py  test_order.py  test_server.py  test_tabdeal_client.py  test_utils.py  test_wallet.py
unofficial_tabdeal_api/: __init__.py  authorization.py  base.py  base_client.py  constants.py  main.py  margin.py  tabdeal_client.py
