[build-system]
requires = ["poetry-core>=2.0.1"]
build-backend = "poetry.core.masonry.api"

[project]
name = "unofficial_tabdeal_api"
version = "0.1.1"
description = "a Package to communicate with Tabdeal platform"
authors = [{ name = "MohsenHNSJ", email = "mohsenhasannezhad@outlook.com" }]
maintainers = [{ name = "MohsenHNSJ", email = "mohsenhasannezhad@outlook.com" }]
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
license-files = ["LICENSE.txt"]
dependencies = ["aiohttp >= 3.11.12"]
keywords = ["tabdeal", "api", "unofficial"]
classifiers = [
    "Framework :: aiohttp",
    "Framework :: AsyncIO",
    "Topic :: Internet :: WWW/HTTP :: Session",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Development Status :: 2 - Pre-Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Financial and Insurance Industry",
    "Natural Language :: English",
]

[project.urls]
Repository = "https://github.com/MohsenHNSJ/unofficial_tabdeal_api"
Bug = "https://github.com/MohsenHNSJ/unofficial_tabdeal_api/issues"
Changelog = "https://github.com/MohsenHNSJ/unofficial_tabdeal_api/releases"

[tool.poetry]
name = "unofficial_tabdeal_api"
version = "0.1.1"
description = "a Package to communicate with Tabdeal platform"
authors = ["MohsenHNSJ <mohsenhasannezhad@outlook.com>"]
classifiers = [
    "Framework :: aiohttp",
    "Framework :: AsyncIO",
    "Topic :: Internet :: WWW/HTTP :: Session",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Development Status :: 2 - Pre-Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Financial and Insurance Industry",
    "Natural Language :: English",
]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.9"