[build-system]
requires = ["poetry-core>=2.1.1"]
build-backend = "poetry.core.masonry.api"

[project]
name = "unofficial_tabdeal_api"
version = "0.1.2"
description = "a Package to communicate with Tabdeal platform"
authors = [{ name = "MohsenHNSJ", email = "mohsenhasannezhad@outlook.com" }]
maintainers = [{ name = "MohsenHNSJ", email = "mohsenhasannezhad@outlook.com" }]
readme = "README.rst"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE.txt"]
dependencies = ["aiohttp >= 3.11.12"]
keywords = ["tabdeal", "api", "unofficial"]
classifiers = [
    "Framework :: aiohttp",
    "Framework :: AsyncIO",
    "Topic :: Internet :: WWW/HTTP :: Session",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Development Status :: 2 - Pre-Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Financial and Insurance Industry",
    "Natural Language :: English",
]

[project.urls]
Documentation = "https://unofficial-tabdeal-api.readthedocs.io/en/latest/"
Repository = "https://github.com/MohsenHNSJ/unofficial_tabdeal_api"
Bug = "https://github.com/MohsenHNSJ/unofficial_tabdeal_api/issues"
Changelog = "https://github.com/MohsenHNSJ/unofficial_tabdeal_api/releases"

[tool.poetry]
name = "unofficial_tabdeal_api"
version = "0.1.2" # Base version
description = "a Package to communicate with Tabdeal platform"
authors = ["MohsenHNSJ <mohsenhasannezhad@outlook.com>"]
classifiers = [
    "Framework :: aiohttp",
    "Framework :: AsyncIO",
    "Topic :: Internet",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Development Status :: 2 - Pre-Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Financial and Insurance Industry",
    "Natural Language :: English",
]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
aiohttp = ">= 3.11.12"

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.9"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
extend-select = [
    "A",     # flake8-builtins
    "ANN",   # flake8-annotations
    "ASYNC", # flake8-async
    "B",     # flake8-bugbear
    "D",     # pydocstyle
    "C4",    # flake8-comprehensions
    "C90",   # mccabe
    "DOC",   # pydoclint
    "E",     # pycodestyle
    "F",     # pyflakes
    "FBT",   # flake8-boolean-trap
    "FLY",   # flynt
    "FURB",  # refurb
    "I",     # isort
    "ISC",   # flake8-implicit-str-concat
    "LOG",   # flake8-logging
    "N",     # pep8-naming
    "PERF",  # perflint
    "PGH",   # pygrep-hooks
    "PL",    # pylint
    "Q",     # flake8-quotes
    "RET",   # flake8-return
    "S",     # flake8-bandit
    "SIM",   # flake8-simplify
    "TC",    # flake8-type-checking
    "TID",   # flake8-tidy-imports
    "TRY",   # tryceratops
    "UP",    # pyupgrade
    "W",     # pycodestyle-warnings
    "YTT",   # flake8-2020
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.mccabe]
# Flag errors (`C901`) whenever the complexity level exceeds 5.
max-complexity = 5
