[metadata]
name = unofficial_tabdeal_api
version = 0.0.1
url = 
author = MohsenHNSJ
description = a package to communicate with Tabdeal platform
long_description = file: README.md
license = MIT
classifiers =
    Programming Language :: Python :: 3

[options]
packages = find:
python_requires = >=3.12
install_requires =
    aiohttp